kubernetes/kube/uptime-kuma/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma # name of the deployment
  namespace: uptime-kuma # name of the namespace
  labels:
    app: uptime-kuma # name of your application
# .......................................
spec:
  replicas: 1 # Number of replicas
  serviceName: uptime-kuma
  selector:
    matchLabels:
      app: uptime-kuma # name of your application
  template:
    metadata:
      labels:
        app: uptime-kuma # name of your application
    spec:
      containers:
        - name: uptime-kuma # name of the container
          image: louislam/uptime-kuma:1.18.0-beta.0 # the image you want to run
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - name: http
              containerPort: 3001 # the port that your application uses
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 3001
              scheme: HTTP
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            timeoutSeconds: 2
            initialDelaySeconds: 15
          volumeMounts:
            - name: kuma-data
              mountPath: /app/data
  volumeClaimTemplates:
    - metadata:
        name: kuma-data
      spec:
        accessModes: ["ReadWriteOnce"]
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
