kubernetes/kube/uptime-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
# .......................................
spec:
  selector:
    app: uptime-kuma
  type: ClusterIP
  # ClusterIP means this service can be accessed by any pod in the cluster
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
