kubernetes/kube/uptime-kuma/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-cert-cluster-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ""
# .......................................
spec:
  ingressClassName: traefik
  rules:
    - host: kuma.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma # the name of the service
                port:
                  number: 3001 # service port-number
  tls:
    - hosts:
        - kuma.home.local
      secretName: kuma-home-local
