kubernetes/kube/uptime-kuma/uptime-kuma.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
# ------------------------------------------------------------------------------
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma # name of the deployment
  namespace: monitoring # name of the namespace
  labels:
    app: uptime-kuma # name of your application
# .......................................
spec:
  replicas: 1 # Number of replicas
  serviceName: uptime-kuma
  selector:
    matchLabels:
      app: uptime-kuma # name of your application
  template:
    metadata:
      labels:
        app: uptime-kuma # name of your application
    spec:
      containers:
        - name: uptime-kuma # name of the container
          image: louislam/uptime-kuma:1.11.4 # the image you want to run
          ports:
            - name: http
              containerPort: 3001 # the port that your application uses
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 3001
          livenessProbe:
            httpGet:
              path: /
              port: 3001
          volumeMounts:
            - name: kuma-data
              mountPath: /app/data
  volumeClaimTemplates:
    - metadata:
        name: kuma-data
      spec:
        accessModes: ["ReadWriteOnce"]
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
# ------------------------------------------------------------------------------
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: monitoring
# .......................................
spec:
  selector:
    app: uptime-kuma
  type: ClusterIP
  # ClusterIP means this service can be accessed by any pod in the cluster
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
# ------------------------------------------------------------------------------
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: monitoring
  annotations:
    scert-manager.io/cluster-issuer: vm-traefik-cluster-issuer
    straefik.ingress.kubernetes.io/router.entrypoints: websecure
    straefik.ingress.kubernetes.io/router.tls: true
    straefik.ingress.kubernetes.io/router.middlewares: ""
# .......................................
spec:
  rules:
    - host: kuma.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma # the name of the service
                port:
                  number: 3001 # service port-number
  tls:
    - hosts:
        - kuma.home.local
      secretName: kuma.home.local
# ------------------------------------------------------------------------------
